--- a/Practice Directory/index.html
+++ b/Practice Directory/index.html
@@ -1,16 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
-	<head> 
-		header text
-		<meta charset="UTF-8" />
-		<meta name="viewport" content="width=device-width">
-		<title> Testing Stuff </title>
-	</head>
-	<body>
-		body text
-	<div id = "mydiv">
-	</div>
+<html lang = "en">
+   <head> 
+      <link rel = "stylesheet" href "css/style.css">
+   </head>
+   <body>
+      <div id = "fizzdiv"></div>
+      <script type = "text/javascript" src = "js/fizzbuzz.js"></script>
 
-	<script type = "text/javascript" src = "js/main.js"></script>
-	</body>
+<!     <script type = "text/javascript" src = "js/car.js"></script>
+
+<!      <div id = "tablediv"></div>
+<!     <script type = "text/javascript" src = "js/table.js"></script>
+   </body>
 </html>
