--- a/Practice Directory/index.html
+++ b/Practice Directory/index.html
@@ -1,15 +1,50 @@
 <!DOCTYPE html>
 <html lang = "en">
    <head> 
-      <link rel = "stylesheet" href "css/style.css">
+      <meta name="viewport" content="width=device-width, initial-scale=1.0"></meta>
+      <link rel = "stylesheet" type= "text/css" href = "css/style.css">
+      <b>Cartography Lab 2 - Coding Problems</b>
    </head>
    <body>
+            <!----------------- counting vowels ------------------>
+      <hr>
+      <div id = "titlediv"></div>
+      <script type = "text/javascript" src = "js/vowels.js"></script>
+         <!---- this puts the title ----->
+
+         <!--- make the text input & button --->
+      <input type = "text" name ="sentence" placeholder = "type your sentence here...">
+      <button type = "submit">How many?</button>
+
+
+      <div id = "voweldiv"></div>
+      <script type = "text/javascript" src = "js/vowels.js"></script>
+
+
+            <!--------------------- even or odd? ------------------>
+      <hr>
+      <b> -- QUESTION FOUR -- </b>
+
+
+            <!------------------- fizzbuzz code -------------------->
+
+      <hr>
+      <b> -- QUESTION THREE -- </b>
       <div id = "fizzdiv"></div>
       <script type = "text/javascript" src = "js/fizzbuzz.js"></script>
+      <hr>
 
-<!     <script type = "text/javascript" src = "js/car.js"></script>
+            <!------------------- car go vroom code ---------------->
+      <b> -- QUESTION FOUR -- </b>
+      <br>
+      <i> (this was also put in the console)</i>
+       <div id = "cardiv"></div>
+      <script type = "text/javascript" src = "js/car.js"></script>
+      <hr>
 
-<!      <div id = "tablediv"></div>
-<!     <script type = "text/javascript" src = "js/table.js"></script>
+            <!------------------- population tables ---------------->
+      <b> -- QUESTION FIVE -- </b>
+      <div id = "tablediv"></div>
+      <script type = "text/javascript" src = "js/table.js"></script>
    </body>
 </html>
